# automata

./: .gitignore  Add.hs  BaseTest.hs  CA.hs  Comparer.hs  CoreTest.hs  GA-CA.hs  LICENSE.txt  Runner.hs  StepOnly.hs  Test.hs  Util.hs  automata.cabal  build.bat  buildprof.bat  dropTest.hs  partest.hs  ring.hs
